HistoryManager corrected